--- a/index.html
+++ b/index.html
@@ -8,5 +8,38 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="calculator">
+      <div class="screen">80085</div>
+      <div class="row">
+        <button class="type-one">AC</button>
+        <button class="type-one">+/-</button>
+        <button class="type-one">%</button>
+        <button class="operation">/</button>
+      </div>
+      <div class="row">
+        <button class="digit">7</button>
+        <button class="digit">8</button>
+        <button class="digit">9</button>
+        <button class="operation">*</button>
+      </div>
+      <div class="row">
+        <button class="digit">4</button>
+        <button class="digit">5</button>
+        <button class="digit">6</button>
+        <button class="operation">-</button>
+      </div>
+      <div class="row">
+        <button class="digit">1</button>
+        <button class="digit">2</button>
+        <button class="digit">3</button>
+        <button class="operation">+</button>
+      </div>
+      <div class="row">
+        <button class="digit digit-wide">0</button>
+        <button class="digit">.</button>
+        <button class="operation">=</button>
+      </div>
+    </div>
+  </body>
 </html>
