Create recordOperation function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <button class="digit digit-wide">0</button>
         <button class="digit">.</button>
-        <button class="operation">=</button>
+        <button class="equals">=</button>
       </div>
     </div>
   </body>
