Create doMath and reset functions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="row">
         <button class="digit digit-wide">0</button>
-        <button class="digit">.</button>
+        <button class="decimal-digit">.</button>
         <button class="equals">=</button>
       </div>
     </div>
