Add functionality to equals button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="calculator">
       <div class="screen">80085</div>
       <div class="row">
-        <button class="type-one">AC</button>
-        <button class="type-one">+/-</button>
-        <button class="type-one">%</button>
+        <button class="type-one clear">AC</button>
+        <button class="type-one plus-minus">+/-</button>
+        <button class="type-one percent">%</button>
         <button class="operation">/</button>
       </div>
       <div class="row">
