Add display functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
     <div class="calculator">
-      <div class="screen">80085</div>
+      <div class="screen">
+        <div class="screen-top">
+          <div class="operand1">operand1</div>
+          <div class="operation-selected">OP</div>
+        </div>
+        <div class="screen-bottom">operand2</div>
+      </div>
       <div class="row">
         <button class="type-one clear">AC</button>
         <button class="type-one plus-minus">+/-</button>
